crystal-facet-uml (1.62.4) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * scripts added to build for Windows(TM) using msys2
  * no fancy names for new objects, only New Diagram, New Element, New Feature

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 28 Feb 2025 18:30:00 +0100

crystal-facet-uml (1.62.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * bugfix for layouting issue: line intersects were ignored in 1.62.2

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 29 Jan 2025 18:30:00 +0100

crystal-facet-uml (1.62.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Layouting improved when classifier contains itself; less errors:
  * layouting further modified by adjusting debts
    OLD layout_good_cases:       ERR=3,  W/C=9,    W/F=3,   W/L=25,   W/R=71
    OLD layout_challenging_cases ERR=37, W/C=9433, W/F=531, W/L=6622, W/R=7844
    NEW layout_good_cases        ERR=0,  W/C=8,    W/F=2,   W/L=25,   W/R=64
    NEW layout_challenging_cases ERR=32, W/C=9710, W/F=510, W/L=6716, W/R=8492
    The diagrams look more orderly - even if this is not reflected in the stats

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 26 Jan 2025 15:30:00 +0100

crystal-facet-uml (1.62.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * All new(!) files are of type json - no native sqlite3 format anymore
  * Stereotype icons of non-empty packages are positioned next to the label

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 31 Dec 2024 08:30:00 +0100

crystal-facet-uml (1.62.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Gui shows labels below the icons of buttons
  * The save icon indicates if there are unsaved changes

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 21 Dec 2024 18:00:00 +0100

crystal-facet-uml (1.61.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagrams can show the defined maximum number of features and relationships
    independant of their occurrences in other diagrams
